Fix Android 4.3- bug that stretches header button heights.

--- a/App/style/main.css
+++ b/App/style/main.css
@@ -176,6 +176,7 @@ header a {
 
 .header-button {
 	width: 8%;
+	height: 5%;
 	display: block; 
 	position: absolute;
 	top: 1.5%;
